--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,26 +4,28 @@
 
 
 .fade-in {
-animation: appear 200ms;
+    animation: appear 200ms;
 }
 
 @keyframes appear {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
 
 .scale-up {
-animation: growUp 200ms;
+    animation: growUp 200ms;
 }
 
 @keyframes growUp {
     0% {
         scale: 0;
     }
+
     100% {
         scale: 1;
     }
@@ -39,5 +41,9 @@ animation: growUp 200ms;
 
 
 .blue-btn {
-    @apply bg-blue-500 hover:bg-blue-600  duration-300 text-white font-semibold rounded-lg px-3 py-1
+    @apply bg-blue-500 hover:bg-blue-600 duration-300 text-white font-semibold rounded-lg px-3 py-1
+}
+
+.flex-center {
+    @apply flex items-center justify-center
 }
